fix: z-index do accordion-button

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,6 +1,3 @@
-// navbar.scss
-
-/* Navbar styles */
 .navbar {
   display: flex;
   justify-content: center;
@@ -12,7 +9,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 1000;
 
   .logo {
     display: flex;
@@ -83,7 +80,6 @@
 }
 
 .categorias-container {
-  // background-color: #f75656;
   border-top: 2px solid #f5f5f5;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
